--- a/FinancialReportsApiUnitTests/FinancialReportsApiUnitTests.csproj
+++ b/FinancialReportsApiUnitTests/FinancialReportsApiUnitTests.csproj
@@ -14,7 +14,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\FinancialReportingApi\FinancialReportsApi.csproj" />
+    <ProjectReference Include="..\FinancialReportsApiClient\FinancialReportsApiClient.csproj" />
   </ItemGroup>
 
 </Project>
